--- a/estilo.css
+++ b/estilo.css
@@ -1,23 +1,34 @@
 * {
     margin: 0;
     padding: 0;
-
+}
+div{
+	transform-style: preserve-3d;
+}
+header {
+    padding: 40px 100px; 
 }
 body{
+	animation: body 2s forwards;
 	font-family: "Trebuchet MS", Helvetica, sans-serif;
-	background: #643d87 url(imagens/fundo2.png) top center;
- }
-div{
-
+	margin: 0;
+  	height: 100vh;
+ 	perspective: 125vmin;
+ 	-webkit-filter: drop-shadow(-1vmin 1vmin 1vmin #000);
+}
+h1{
+	position: relative;
+	top: 100px;
+	left: 100px;
+	 transform: rotatey(35deg);
+	cursor: default;
+	color: #1F6FEB;
 }
 a{
 	color: black;
 	text-decoration: none;
 }
-#nome{
-	z-index: 1;
-	top: 10px;
-}
+
 #caixa{
 	display: inline-block;
 	margin: 0;
@@ -36,7 +47,6 @@ a{
 	float: left;
 	width: 500px;
 	height: 450px;
-	
 	display: inline-block;
 }
 #inicio{
@@ -82,4 +92,56 @@ a{
 }
 .clear{
 	clear: both;
+}
+@keyframes body{
+	from{
+		background: #000;
+	}
+	to{
+		background: #0F0F0F;
+	}
+}
+@keyframes animacaoNome{
+	0%{
+		font-size: 1em;
+		left: -500px;
+	}
+	50%{
+		left: 20px;
+	}
+	100%{
+		font-size: 2em;	
+		left: -10px;
+	}
+
+}
+@keyframes animacaoNome1{
+	0%{
+		color: #1F6FEB;
+		font-size: 1em;
+		left: -500px;
+	}
+	50%{
+		left: 20px;
+	}
+	100%{
+		color: #fff;
+		font-size: 3em;	
+		left: -10px;
+	}
+}
+#apresentação1{
+	position: relative;
+	left: -500px;
+	animation: animacaoNome 1s  forwards;
+}
+#apresentação2{
+	position: relative;
+	left: -500px;
+	animation: animacaoNome 1s 0.5s forwards;
+}
+#apresentação3{
+	position: relative;
+	left: -500px;
+	animation: animacaoNome1 1s 1s forwards;
 }
