--- a/estilo.css
+++ b/estilo.css
@@ -1,20 +1,25 @@
-* {
-    margin: 0;
-    padding: 0;
-}
-div{
-	transform-style: preserve-3d;
-}
 header {
     padding: 2em 100px; 
 }
 body{
+	color: #1F6FEB;
 	animation: body 2s forwards;
 	font-family: "Trebuchet MS", Helvetica, sans-serif;
 	margin: 0;
-  	height: 100vh;
+  height: 100vh;
  	perspective: 125vmin;
  	-webkit-filter: drop-shadow(-1vmin 1vmin 1vmin #000);
+}
+hr{
+	position: relative;
+	left: -100%;
+	height:3px;
+	border-width:0;
+	width: 95%;
+	background-color:black;
+	margin-left: auto;
+  margin-right: auto;
+  animation: animacaoConteudo 1s 1.7s forwards;
 }
 span{
 }
@@ -41,40 +46,11 @@ a{
 #caixa h2{
 	margin: 25px 0;
 }
-#eu{
-	float: left;
-	width: 500px;
-	height: 450px;
-	display: inline-block;
-}
-#inicio{
-	width: 500px;
-	height: 450px;
-	display: inline-block;
-}
-
-#sobreMim{
-	width: 500px;
-	display: none;
-}
-#formação{
-	width: 500px;
-	display: none;
-}
-#cursos{
-	width: 500px;
-	display: none;
-}
-#experiência{
-	width: 500px;
-	display: none;
-}
-#habilidades{
-	width: 500px;
-	display: none;
-}
-#contato{
-	margin-top: 175px;
+.titulos{
+	font-size: 4em;
+	position: relative;
+	left: -100%;
+	animation: animacaoConteudo 1s 1.7s forwards;
 }
 #email{
 	background: url(imagens/iconeEmail.png) no-repeat;
@@ -87,9 +63,6 @@ a{
 #gitHub{
 	background: url(imagens/iconeGitHub.png) no-repeat;
 	background-position: 105px;
-}
-.clear{
-	clear: both;
 }
 @keyframes body{
 	from{
@@ -128,10 +101,22 @@ a{
 		left: -1%;
 	}
 }
+@keyframes animacaoConteudo{
+	0%{
+		left: -500px;
+	}
+	50%{
+		left: 2%;
+	}
+	100%{	
+		left: 0%;
+	}
+
+}
 #apresentação1{
 	position: relative;
 	left: -500px;
-	animation: animacaoNome 1s  forwards;
+	animation: animacaoNome 1s forwards;
 }
 #apresentação2{
 	position: relative;
@@ -143,3 +128,65 @@ a{
 	left: -500px;
 	animation: animacaoNome1 1s 1s forwards;
 }
+.container {
+  	display: flex;
+  	align-items: center;
+  	justify-content: center;
+  	height: 100%;
+  	width: 100%;
+  	overflow: hidden;
+}
+.container__image {
+	animation: animacaoConteudo 1s 1.7s forwards;
+  	position: relative;
+  	left: -100%;
+ 	display: flex;
+  	flex-direction: column;
+  	justify-content: center;
+  	width: 400px;
+  	height: 300px;
+  	border-radius: 50%;
+  	background-image: url("imagens/linguagensProgramação.png");
+  	background-size: cover;
+  	transition: ease-in-out 0.3s;
+  	z-index: 2;
+}
+.container__image:before {
+  content: " ";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+  background: inherit;
+  background-position: bottom;
+  filter: blur(40px) saturate(0%);
+  transform: scaleX(0.4);
+  transition: ease-in-out 0.4s;
+  border-radius: 120px;
+  transform-origin: right;
+  opacity: 0;
+  z-index: -1;
+}
+.container__image .container__info {
+  position: relative;
+  line-height: 1.8;
+  transition: ease-in-out 0.3s;
+  opacity: 0;
+}
+.container__image .container__info2 {
+  transition-delay: 0.15s;
+}
+.container__image:hover {
+  border-radius: 30px;
+  width: 450px;
+  height: 310px;
+  box-shadow: 0px 0px 1px #1F6FEB, 0px 2px 6px #1F6FEB, 0px 16px 24px #1F6FEB, 0px 24px 32px #1F6FEB;
+}
+.container__image:hover .container__info {
+  transform: translate3d(-60%, 0px, 0px);
+  opacity: 1;
+}
+
