--- a/estilo.css
+++ b/estilo.css
@@ -1,20 +1,21 @@
-* {
-    
-}
-div{
-	
-}
-header {
-    padding: 2em 100px; 
-}
 body{
 	color: #1F6FEB;
 	animation: body 2s forwards;
 	font-family: "Trebuchet MS", Helvetica, sans-serif;
 	margin: 0;
   height: 100vh;
- 	perspective: 125vmin;
- 	-webkit-filter: drop-shadow(-1vmin 1vmin 1vmin #000);
+ 	filter: drop-shadow(-1vmin 1vmin 1vmin #000);
+}
+hr.HrCima{
+	position: relative;
+	left: -100%;
+	height:3px;
+	border-width:0;
+	width: 95%;
+	background-color:#0F0F0F;
+	margin-left: auto;
+  margin-right: auto;
+  animation: animacaoConteudo 1s 1.7s forwards;
 }
 hr{
 	position: relative;
@@ -22,12 +23,21 @@ hr{
 	height:3px;
 	border-width:0;
 	width: 95%;
-	background-color:black;
+	background-color:#1F6FEB;
 	margin-left: auto;
   margin-right: auto;
   animation: animacaoConteudo 1s 1.7s forwards;
 }
-span{
+hr.HrBaixo{
+	position: relative;
+	left: -100%;
+	height:3px;
+	border-width:0;
+	width: 95%;
+	background-color:#0F0F0F;
+	margin-left: auto;
+  margin-right: auto;
+  animation: animacaoConteudo 1s 1.7s forwards;
 }
 h1{
 	cursor: default;
@@ -37,7 +47,9 @@ a{
 	color: black;
 	text-decoration: none;
 }
-
+#nome{
+	padding: 2em 100px; 
+}
 #caixa{
 	display: inline-block;
 	margin: 0;
@@ -87,7 +99,7 @@ a{
 		left: 2%;
 	}
 	100%{
-		font-size: 2em;	
+		font-size: 2.5em;	
 		left: -1%;
 	}
 
@@ -103,7 +115,7 @@ a{
 	}
 	100%{
 		color: #fff;
-		font-size: 3em;	
+		font-size: 3.5em;	
 		left: -1%;
 	}
 }
@@ -135,27 +147,53 @@ a{
 	animation: animacaoNome1 1s 1s forwards;
 }
 .container {
-  	display: flex;
-  	align-items: center;
-  	justify-content: center;
-  	height: 100%;
-  	width: 100%;
-  	overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 500px;
+  width: 100%;
+  overflow: hidden;
 }
-.container__image {
-	animation: animacaoConteudo 1s 1.7s forwards;
-  	position: relative;
-  	left: -100%;
+.web, .java, .flutter{
+	 position: relative;
+  left: -100%;
+  animation: animacaoConteudo 1s 1.7s forwards;
+}
+.web .container__image{
  	display: flex;
-  	flex-direction: column;
-  	justify-content: center;
-  	width: 400px;
-  	height: 300px;
-  	border-radius: 50%;
-  	background-image: url("imagens/linguagensProgramacao.png");
-  	background-size: cover;
-  	transition: ease-in-out 0.3s;
-  	z-index: 2;
+  flex-direction: column;
+  justify-content: center;
+  width: 400px;
+  height: 300px;
+  border-radius: 50%;
+  background-image: url("imagens/linguagensProgramacao.png");
+  background-size: cover;
+  transition: ease-in-out 0.3s;
+  z-index: 2;
+}
+.java .container__image{
+ 	display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 400px;
+  height: 300px;
+  border-radius: 50%;
+  background-image: url("imagens/java.png");
+  background-size: cover;
+  transition: ease-in-out 0.3s;
+  z-index: 2;
+}
+.flutter .container__image{
+ 	display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 400px;
+  height: 300px;
+  border-radius: 50%;
+  background-image: url("imagens/flutter.png");
+  background-size: cover;
+  transition: ease-in-out 0.3s;
+  z-index: 2;
 }
 .container__image:before {
   content: " ";
