--- a/estilo.css
+++ b/estilo.css
@@ -243,4 +243,11 @@ a{
     top: 0;
     left: 0%;
 }
+ /*Small devices (landscape phones, 576px and up)*/
+@media (min-width: 576px) and (max-width: 767.98px) { 
 
+#sobre-mim{
+	text-align: center;
+	font-size: 4em;
+}
+ }
