--- a/estilo.css
+++ b/estilo.css
@@ -244,7 +244,7 @@ a{
     left: 0%;
 }
  /*Small devices (landscape phones, 576px and up)*/
-@media (min-width: 576px) and (max-width: 767.98px) { 
+@media (max-width: 767.98px) { 
 
 #sobre-mim{
 	text-align: center;
